--- a/Functional Requirements/Functional Requirements.tex
+++ b/Functional Requirements/Functional Requirements.tex
@@ -40,5 +40,47 @@
 
 \tableofcontents
 \newpage
+\section{Functional Requirements}
+\subsection{Prioritization and Description}
+\begin{itemize}
+\item[$\bullet$] 1 createProject: Critical
+\par Creates a new STORM project
+\item[$\bullet$] 2 randomizeTeams: Critical
+\par Creates teams with no criteria
+\item[$\bullet$] 3 manualTeamSelection: Critical
+\par Client manually moves people into teams
+\end{itemize}
+
+\subsection{Use case diagrams}
+\begin{itemize}
+\item 1 createProject
+\par
+\includegraphics[width=13cm]{image.jpg}
+    \rule{0\linewidth}{0.15\linewidth}\par
+\item 2 randomizeTeams
+\par
+\includegraphics[width=13cm]{image.jpg}
+    \rule{0\linewidth}{0.15\linewidth}\par
+\item 3 manualTeamSelection
+\par
+\includegraphics[width=13cm]{image.jpg}
+    \rule{0\linewidth}{0.15\linewidth}\par
+\end{itemize}
+
+\subsection{State diagrams}
+\begin{itemize}
+\item 1 createProject
+\par
+\includegraphics[width=13cm]{image.jpg}
+    \rule{0\linewidth}{0.15\linewidth}\par
+\item 2 randomizeTeams
+\par
+\includegraphics[width=13cm]{image.jpg}
+    \rule{0\linewidth}{0.15\linewidth}\par
+\item 3 manualTeamSelection
+\par
+\includegraphics[width=13cm]{image.jpg}
+    \rule{0\linewidth}{0.15\linewidth}\par
+\end{itemize}
 
 \end{document}
