--- a/RequirementsV0.1/Functional Requirements.tex
+++ b/RequirementsV0.1/Functional Requirements.tex
@@ -40,7 +40,14 @@
 
 \tableofcontents
 \newpage
-\section{Functional Requirements}
+\section{Vision an Scope}
+\input{./subsections/visionAndScope.tex}
+
+\section{Application requirements and design}
+\subsection{Modular Design}
+
+
+
 \subsection{Prioritization and Description}
 \begin{itemize}
 \item[$\bullet$] 1 createProject: Critical
