--- a/RequirementsV0.1/Functional Requirements.tex
+++ b/RequirementsV0.1/Functional Requirements.tex
@@ -45,7 +45,7 @@
 
 \section{Application requirements and design}
 \subsection{Modular Design}
-
+\input{./subsections/modularDesign.tex}
 
 
 \subsection{Prioritization and Description}
