--- a/RequirementsV0.1/Functional Requirements.tex
+++ b/RequirementsV0.1/Functional Requirements.tex
@@ -46,48 +46,18 @@
 \section{Application requirements and design}
 \subsection{Modular Design}
 \input{./subsections/modularDesign.tex}
+\subsection{Authorization Module}
+\input{./subsections/authorization.tex}
+\subsection{Project Module}
+\input{./subsections/project.tex}
 
-
-\subsection{Prioritization and Description}
-\begin{itemize}
-\item[$\bullet$] 1 createProject: Critical
-\par Creates a new STORM project
-\item[$\bullet$] 2 randomizeTeams: Critical
-\par Creates teams with no criteria
-\item[$\bullet$] 3 manualTeamSelection: Critical
-\par Client manually moves people into teams
-\end{itemize}
-
-\subsection{Use case diagrams}
-\begin{itemize}
-\item 1 createProject
-\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
-\item 2 randomizeTeams
-\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
-\item 3 manualTeamSelection
-\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
-\end{itemize}
-
-\subsection{State diagrams}
-\begin{itemize}
-\item 1 createProject
-\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
-\item 2 randomizeTeams
-\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
-\item 3 manualTeamSelection
-\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
-\end{itemize}
-
+\section{Architectural Requirements}
+\subsection{Access and Integration Requirements}
+\input{./subsections/accessAndIntegrationRequirements.tex}
+\subsection{Quality Requirements}
+\input{./subsections/qualityRequirements.tex}
+\subsection{Architectural Responsibilities}
+\input{./subsections/architecturalResponsibilities.tex}
+\subsection{Architecture Constraints}
+\input{./subsections/architectureConstraints.tex}
 \end{document}
