Added vision and scope

--- a/RequirementsV0.1/subsections/visionAndScope.tex
+++ b/RequirementsV0.1/subsections/visionAndScope.tex
@@ -10,6 +10,14 @@ was designed and the project was brought to an end.
 
 \subsubsection{Project Background}
 The lecturers of the "Software Engineering" module sought the need for such a shuufling tool, this
-time approaching students of the "Software Development" module. The initial requirements specification developed by the 
-This document specifies all known requirements to date for the first version of the whole team
-shuffling system.
+time approaching students of the "Software Development" module. The requirements specification previously 
+developed will be used as a starting point. This document will be stripped down to a "basic sytem" requirements
+specification, not comletely discarding functionality specified in the previous documentation but adding relevant functionality
+as the development lifecycle persist.
+
+\subsection{Project Scope}
+The complete system should enable users to build teams, from a list of students, by selecting a
+set of criteria. This will aid the users in such a way that the users do not have to build the teams
+manually, which may require a lot of time. The users can spend their time rather on analysing
+the results of each “Rocking the Boat” round to change the criteria for the next round more
+effectively.
