--- a/RequirementsV0.1/subsections/visionAndScope.tex
+++ b/RequirementsV0.1/subsections/visionAndScope.tex
@@ -9,11 +9,11 @@ set of lecturer ­defined criteria to select the teams with. An incomplete requi
 was designed and the project was brought to an end. 
 
 \subsubsection{Project Background}
-The lecturers of the "Software Engineering" module sought the need for such a shuufling tool, this
+The lecturers of the "Software Engineering" module sought the need for such a shuffling tool, this
 time approaching students of the "Software Development" module. The requirements specification previously 
 developed will be used as a starting point. This document will be stripped down to a "basic sytem" requirements
-specification, not comletely discarding functionality specified in the previous documentation but adding relevant functionality
-as the development lifecycle persist.
+specification, not completely discarding functionality specified in the previous documentation but adding relevant functionality
+as the development lifecycle persists.
 
 \subsection{Project Scope}
 The complete system should enable users to build teams, from a list of students, by selecting a
