--- a/RequirementsV0.1/Functional Requirements.tex
+++ b/RequirementsV0.1/Functional Requirements.tex
@@ -40,7 +40,7 @@
 
 \tableofcontents
 \newpage
-\section{Vision an Scope}
+\section{Vision and Scope}
 \input{./subsections/visionAndScope.tex}
 
 \section{Application requirements and design}
