--- a/RequirementsV0.1/Functional Requirements.tex
+++ b/RequirementsV0.1/Functional Requirements.tex
@@ -46,8 +46,8 @@
 \section{Application requirements and design}
 \subsection{Modular Design}
 \input{./subsections/modularDesign.tex}
-\subsection{Authorization Module}
-\input{./subsections/authorization.tex}
+\subsection{User Access Module}
+\input{./subsections/userAccess.tex}
 \subsection{Project Module}
 \input{./subsections/project.tex}
 
