Architecture Constraints added and Enumerate fixed

--- a/RequirementsV0.1/subsections/accessAndIntegrationRequirements.tex
+++ b/RequirementsV0.1/subsections/accessAndIntegrationRequirements.tex
@@ -1,11 +1,9 @@
 \subsubsection{Human Access Channels}
 The system will be accessible by human users through the following channels:\par
-\begin{itemize}
-\item 1. From a web browser through a rich web interface. The system must be accessible from any of
-the standards-compliant web browsers including all recent versions of Mozilla Firefox, Google
-Chrome, Apple Safari and Microsoft Internet Explorer.
-\item 2. From mobile devices if time allows it.
-\end{itemize}
+\begin{enumerate}
+\item From a web browser through a rich web interface. The system must be accessible from any of the standards-compliant web browsers including all recent versions of Mozilla Firefox, Google Chrome, Apple Safari and Microsoft Internet Explorer.
+\item From mobile devices if time allows it.
+\end{enumerate}
 \subsubsection{System Access Channels}
 Other systems should be able to access services offered by STORM. Perhaps direct feed of teams into other systems.
 \subsubsection{System Access Channels}
