--- a/RequirementsV0.1/subsections/architecturalResponsibilities.tex
+++ b/RequirementsV0.1/subsections/architecturalResponsibilities.tex
@@ -1,8 +1,8 @@
 The architectural responsibilities for STORM include the responsibilities of providing an infrastructure for
-\begin{itemize}
-\item 1. a web access channel,
-\item 2. hosting and providing the execution environment for the services/business logic of the system,
-\item 3. persisting and providing access to domain objects,
-\item 4. logging,
-\item 5. and delivering reports readable by 3rd party applications.
-\end{itemize}
+\begin{enumerate}
+\item a web access channel,
+\item hosting and providing the execution environment for the services/business logic of the system,
+\item persisting and providing access to domain objects,
+\item logging,
+\item and delivering reports readable by 3rd party applications.
+\end{enumerate}
