--- a/RequirementsV0.1/subsections/userAccess.tex
+++ b/RequirementsV0.1/subsections/userAccess.tex
@@ -1,25 +1,20 @@
 This module deals with the STORM user access, specifically signing up, logging in and logging out.
 
 \subsubsection{Use-cases}
-The user access module provides services to sign up, login and log out.
+The user access module provides services to sign up, login and log out.\par
+\includegraphics[width=13cm]{./graphics/userAccessUseCase.jpg}
+    \rule{0\linewidth}{0.15\linewidth}\par
 \begin{enumerate}
 \item Sign Up\par
 Priority: Critical.\par
 Pre-condition: Client must have a valid e-mail address.\par
 Post-condition: Client has a STORM profile.\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
 \item Login\par
 Priority: Critical.\par
 Pre-condition: Client must have a STORM profile.\par
 Post-condition: Client can now use STORM functionality.\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
 \item Log out\par
 Priority: Critical.\par
 Pre-condition: Client must be logged into STORM.\par
-Post-condition: Client can no longer use STORM functionality.\par
-\includegraphics[width=13cm]{image.jpg}
-    \rule{0\linewidth}{0.15\linewidth}\par
 \end{enumerate}
 
