--- a/Documentation/Requirements/Requirements.tex
+++ b/Documentation/Requirements/Requirements.tex
@@ -50,7 +50,12 @@
 \input{./subsections/userAccess.tex}
 \subsection{Project Module}
 \input{./subsections/project.tex}
-
+\subsection{Database Access Module}
+\input{./subsections/dbAccess.tex}
+\subsection{Algorithm Module}
+\input{./subsections/algorithm.tex}
+\subsection{Reporting Module}
+\input{./subsections/reporting.tex}
 \section{Architectural Requirements}
 \subsection{Access and Integration Requirements}
 \input{./subsections/accessAndIntegrationRequirements.tex}
