--- a/Documentation/Requirements/subsections/userAccess.tex
+++ b/Documentation/Requirements/subsections/userAccess.tex
@@ -9,6 +9,12 @@ The user access module provides services to sign up, login and log out.\par
 Priority: Critical.\par
 Pre-condition: Client must have a valid e-mail address.\par
 Post-condition: Client has a STORM profile.\par
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=13cm]{./graphics/signUpState.jpg}
+    \caption{SignUp state diagram}
+    \label{fig:signUp_state}
+\end{figure}
 \item Login\par
 Priority: Critical.\par
 Pre-condition: Client must have a STORM profile.\par
@@ -16,5 +22,11 @@ Post-condition: Client can now use STORM functionality.\par
 \item Log out\par
 Priority: Critical.\par
 Pre-condition: Client must be logged into STORM.\par
+\begin{figure}[p]
+    \centering
+    \includegraphics[width=13cm]{./graphics/logInOutState.jpg}
+    \caption{Login/logout state diagram}
+    \label{fig:login/out_state}
+\end{figure}
 \end{enumerate}
 
