Added Project Use Case

--- a/Documentation/Requirements/Requirements.tex
+++ b/Documentation/Requirements/Requirements.tex
@@ -15,7 +15,7 @@
 \begin{minipage}{0.75\linewidth}
     \centering
 %University logo
-    \includegraphics[width=13cm]{universityLogo.jpg}
+    \includegraphics[width=13cm]{./graphics/universityLogo.jpg}
     \rule{0\linewidth}{0.15\linewidth}\par
 
 %Thesis title
