Algorithm module added
Stub for v0.1 of the spec added

--- a/Documentation/Requirements/Requirements.tex
+++ b/Documentation/Requirements/Requirements.tex
@@ -50,7 +50,7 @@
 \input{./subsections/userAccess.tex}
 \subsection{Project Module}
 \input{./subsections/project.tex}
-\subsection{Database Access Module}
+\subsection{Database Interaction Module}
 \input{./subsections/dbAccess.tex}
 \subsection{Algorithm Module}
 \input{./subsections/algorithm.tex}
