Error corrections in projects module documentation

--- a/Documentation/Requirements/subsections/project.tex
+++ b/Documentation/Requirements/subsections/project.tex
@@ -1,7 +1,7 @@
 This module deals with the configuration of projects. Initially a skeleton project will be set up with basic criteria 
 and additional criteria can be added at a later stage as needed.
 \subsubsection{Use-cases}
-The projects mojule provides services create and manipulate projects.\par
+The projects module provides services to create and manipulate projects.\par
 \includegraphics[width=13cm]{./graphics/createProjectUseCase.jpg}
     \rule{0\linewidth}{0.15\linewidth}\par
 \begin{enumerate}
@@ -21,7 +21,7 @@ Priority: Critical.\par
 Pre-condition: Client must have a STORM profile.\par
 Pre-condition: Client must have created a STORM project skeleton.\par
 Post-condition: Project database is updated with a list of subjects.\par
-\item ConfigureCriteria\par
+\item configureCriteria\par
 Priority: Critical.\par
 Pre-condition: Client must have a STORM profile.\par
 Pre-condition: Client must be logged into STORM.\par
