Spelling and grammar checks

--- a/Documentation/Requirements/subsections/algorithm.tex
+++ b/Documentation/Requirements/subsections/algorithm.tex
@@ -11,7 +11,7 @@ Priority: Critical.\par
 Pre-condition: Project must have users.\par
 Pre-condition: Team size or number of teams must be specified.\par
 Post-condition: Random teams are built.\par
-    \begin{figure}
+    \begin{figure}[h]
         \centering
         \includegraphics[width=13cm]{./graphics/randomizeState.jpg}
         \caption{Randomize state diagram}
