--- a/Documentation/TestCases/useCaseTests.tex
+++ b/Documentation/TestCases/useCaseTests.tex
@@ -109,8 +109,51 @@ Scenario 2 - Username unavailable & Basic Flow & A1  \\[1ex]
 \subsubsection{Login}
 \begin{enumerate}
 \item Scenarios
-\item Test Cases
+
+\begin{center}
+ \begin{tabu}to 0.8\textwidth{|X[l]| X|X|} 
+ \hline
+ Scenario Name & Starting Flow & Alternate \\ [1ex]
+ \hline
+ Scenario 1 - Successful login & Basic Flow &\\ [1ex]
+ \hline
+ Scenario 2 - Username invalid & Basic Flow & A1  \\[1ex]
+ \hline
+ Scenario 3 - Password invalid & Basic Flow & A2  \\[1ex]
+ \hline
+\end{tabu}
+\end{center}
+
+\item Test Cases\\
+\\V - Valid\\ I - Invalid\\ n/a - not applicable
+\begin{center}
+\begin{tabu}to 1.1\textwidth{|X[l]|X|X|X|X|} 
+ \hline
+ Test Case ID & Scenario Name & Username & Password & Expected Result \\ [0.1ex]
+ \hline
+  RC 1 & Scenario1 Successful login & V & V & Projects screen displayed\\ [0.1ex]
+ \hline
+ RC 2 & Scenario2 Username invalid & I&V&Error; No such user \\[0.1ex]
+ \hline
+  RC 3 & Scenario3 Password invalid & V&I&Error; Password invalid\\[0.1ex]
+ \hline
+
+\end{tabu}
+\end{center}
 \item Data Values
+\begin{center}
+\begin{tabu}to 1.1\textwidth{|X[l]|X|X|X|X|} 
+ \hline
+ Test Case ID & Scenario Name & Username & Password & Expected Result \\ [0.1ex]
+ \hline
+  RC 1 & Scenario1 Successful login & Ronnie & abcdeF1 & Project screan displayed\\ [0.1ex]
+ \hline
+ RC 2 & Scenario2 Username invalid & Vreda&abcdeF1&Error; Username invalid \\[0.1ex]
+ \hline
+  RC 3 & Scenario3 Password invalid &Ronnie&abcdeF5&Error; Password invalid\\[0.1ex]
+ \hline
+\end{tabu}
+\end{center}
 \end{enumerate}
 
 \subsection{Algorithm Module}
