--- a/Documentation/User Manual/UserManual.tex
+++ b/Documentation/User Manual/UserManual.tex
@@ -33,7 +33,7 @@
     
     \vspace{1cm}
     
-    \href{https://github.com/DianMarx/STORM}{Click here to go to our GitHub}
+   % \href{https://github.com/DianMarx/STORM}{Click here to go to our GitHub}
     \vspace{1cm}
 	
 \end{minipage}
@@ -44,20 +44,25 @@
 \newpage
 \section{General Information}
 \subsection{System Overview}
-The complete system should enable users to build teams, from a list of students, by selecting a set of criteria. This will aid the users in such a way that the users do not have to build the teams manually, which may require a lot of time. The users can spend their time rather on analysing the results of each ?Rocking the Boat? round to change the criteria for the next round more effectively.
+	\input{./GeneralInformation/SystemOverview}
 
 \subsection{System Configuration}
-
+	\input{./GeneralInformation/SystemConfiguration}
+	
 \subsection{Installation}
-
+	\input{./GeneralInformation/Installation}
+	
 \newpage
 \section{Getting Started}
-
+	\input{./GettingStarted/GettingStarted}
+	
 \newpage
 \section{Using the system}
-
+	\input{./UsingTheSystem/UsingTheSystem}
+	
 \newpage
 \section{Troubleshooting}
-
+	\input{./Troubleshooting/Troubleshooting}
+	
 \end{document}
 
