--- a/Documentation/User Manual/GettingStarted/GettingStarted.tex
+++ b/Documentation/User Manual/GettingStarted/GettingStarted.tex
@@ -1,1 +1,9 @@
-"Place Holder"
+\subsection{Back End}
+	Refer to this section for information on the Back End part of the system. I.E. The part that will be hosted on the server.\par
+	\vspace{0.3cm}
+	\input{./GettingStarted/BackEnd}
+	
+\subsection{Back End}
+	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
+	\vspace{0.3cm}
+	\input{./GettingStarted/FrontEnd}
