User manual progress

--- a/Documentation/User Manual/GettingStarted/FrontEnd.tex
+++ b/Documentation/User Manual/GettingStarted/FrontEnd.tex
@@ -2,7 +2,8 @@ How to...
 
 \begin{description}
  	\item[get a licence?] \hfill \\
- 		The first item
+ 		As this is a free software, there is no need to buy any licences. To use this software, simply 
+		sign up for a UserName on the website, Log In, and make use of the shuffling system.
  	\item[get a User ID] \hfill \\
 		 The second item
  	\item[change user ID] \hfill \\
