--- a/Documentation/User Manual/GettingStarted/FrontEnd.tex
+++ b/Documentation/User Manual/GettingStarted/FrontEnd.tex
@@ -5,11 +5,18 @@ How to...
  		As this is a free software, there is no need to buy any licences. To use this software, simply 
 		sign up for a UserName on the website, Log In, and make use of the shuffling system.
  	\item[get a User ID] \hfill \\
-		 The second item
- 	\item[change user ID] \hfill \\
- 		The third etc 
+		To sign up for an account, and get a User ID, enter user details in the appropriate fields in the 		following figure.\par
+   		 \includegraphics[width=13cm]{./graphics/StormUMSU1.jpg}
+   		Click on submit and the system will register the user in the database.
+	\item[Log In] \hfill \\
+ 		To log in to an account enter user details in the appropriate fields in the following figure.\par
+   		 \includegraphics[width=13cm]{./graphics/StormUMSU2.jpg}
+   		Click on submit and the system will navigate to the user's specific team shuffling page.
+    	\item[change Username] \hfill \\
+ 		"Place Holder"
 	\item[change password] \hfill \\
- 		The third etc 
+ 		"Place Holder"
 	\item[use the system as a guest] \hfill \\
- 		The third etc \ldots
+ 		Guests to the system will be able to access the website, and navigate around to see what it
+		is all about, without having to log in or register and starting shuffling teams from the first foot in 		the door. To access this feature, just navigate to the homepage, and do not click on either 		'Sign In' or 'Sign Up'  \ldots
 \end{description}
