Working on UserManual

--- a/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
+++ b/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
@@ -1,1 +1,17 @@
-"Place Holder"
+\subsection{Back End}
+	Refer to this section for information on the Back End part of the system. I.E. The part that will be hosted on the server.\par
+	\vspace{0.3cm}
+	
+\begin{wrapfigure}{i}{0.22\textwidth}
+%  \begin{center}
+    \includegraphics[width=0.2\textwidth]{./graphics/LinuxServer.jpg}
+%  \end{center}
+\end{wrapfigure}
+
+The back end of this system should be hosted on a server.
+As it is a relatively small system, and open source. it can be hosted on a fairly inexpensive server with Linux on.
+
+Keep in mind that as the database grows, a bigger server wil need to be integrated.  This will be effortless as the system is designed to be scalable
+
+\subsection{Front End}
+	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
