--- a/Documentation/User Manual/GettingStarted/GettingStarted.tex
+++ b/Documentation/User Manual/GettingStarted/GettingStarted.tex
@@ -3,7 +3,7 @@
 	\vspace{0.3cm}
 	\input{./GettingStarted/BackEnd}
 	
-\subsection{Back End}
+\subsection{Front End}
 	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	\input{./GettingStarted/FrontEnd}
