Added Pre-And Post-Conditions for .csv import

--- a/Documentation/Requirements/subsections/project.tex
+++ b/Documentation/Requirements/subsections/project.tex
@@ -20,6 +20,8 @@ Post-condition: Manager has permition to colaborate on the project.\par
 Priority: Critical.\par
 Pre-condition: Client must have a STORM profile.\par
 Pre-condition: Client must have created a STORM project skeleton.\par
+Pre-condition: A .csv file should exist and should be selected.\par
+Pre-condition: The .csv should have subjects in it.\par
 Post-condition: Project database is updated with a list of subjects.\par
 \item configureCriteria\par
 Priority: Critical.\par
