--- a/Documentation/Requirements/subsections/qualityRequirements.tex
+++ b/Documentation/Requirements/subsections/qualityRequirements.tex
@@ -1,4 +1,4 @@
-The quality requirements are the requirements around the quality attributes of the systems and
+The quality requirements are the requirements around the quality attributes of the system and
 the services it provides. Quality requirements relevant to project STORM are listed below in order of priority. \par
 
 \subsubsection{Usability}
@@ -13,7 +13,7 @@ The system must implement a very generic optimization algorithm in order to be u
 
 \subsubsection{Performance}
 \begin{itemize}
-\item The optimization algorithm should be able to sort a maximum of 10 000 subjects into groups and respond within 5 seconds.
+\item The optimization algorithm should be able to sort a maximum of 10 000 subjects into groups and respond within 10 seconds.
 \item Reporting queries should respond within 15 seconds. \par
 The above figures does not include network round trip which is outside the control of the system.
 \end{itemize}
@@ -46,6 +46,11 @@ The system must be deployable
 \end{itemize}
 
 \subsubsection{Security}
+Security is a fairly important aspect of the system in order to protect sensitive project and subject data.
+The system should also allow users that are logged on to the system to assign colaborators
+to a project. 
+
+
 \subsubsection{Testability}
 All services offered by the system must be testable through
 \begin{enumerate}
