--- a/Documentation/User Manual/GeneralInformation/Installation.tex
+++ b/Documentation/User Manual/GeneralInformation/Installation.tex
@@ -1,1 +1,12 @@
-"Place Holder"
+\subsection{Back End}
+	Refer to this section for information on the Back End part of the system. I.E. The part that will be hosted on the server.\par
+	\vspace{0.3cm}
+	
+Place Holder
+
+\subsection{Front End}
+	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
+	\vspace{0.3cm}
+	
+Because the system is web based, it does not have to be installed on your device. 
+Your browser might ask you to install Java if you do not have the appropriate version.
