--- a/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
+++ b/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
@@ -11,7 +11,12 @@
 The back end of this system should be hosted on a server.
 As it is a relatively small system, and open source. it can be hosted on a fairly inexpensive server with Linux on.
 
-Keep in mind that as the database grows, a bigger server wil need to be integrated.  This will be effortless as the system is designed to be scalable
+Keep in mind that as the database grows, a bigger server will need to be integrated.  This will be effortless as the system is designed to be scalable
 
 \subsection{Front End}
 	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
+	\vspace{0.3cm}
+	
+For users to use the system, they only need a web activated device with a web browser.
+
+The STORM system works best with Google Chrome, but can be used on all other browsers(The look and feel of the system might just be a bit more boring/basic than when run on Google Chrome).
