Checked the specification document for errors and made minor changes

--- a/Documentation/Requirements/subsections/architecturalResponsibilities.tex
+++ b/Documentation/Requirements/subsections/architecturalResponsibilities.tex
@@ -1,8 +1,8 @@
-The architectural responsibilities for STORM include the responsibilities of providing an infrastructure for
-\begin{enumerate}
+The architectural responsibilities for STORM includes the responsibilities of providing an infrastructure for
+\begin{itemize}
 \item a web access channel,
 \item hosting and providing the execution environment for the services/business logic of the system,
 \item persisting and providing access to domain objects,
 \item logging,
 \item and delivering reports readable by 3rd party applications.
-\end{enumerate}
+\end{itemize}
