--- a/Documentation/Requirements/subsections/dbAccess.tex
+++ b/Documentation/Requirements/subsections/dbAccess.tex
@@ -1,7 +1,7 @@
-This module deals with creation and interaction with the database.
+This module deals with the creation and interaction with the database.
 
 \subsubsection{Use-cases}
-After a project has been created a database collection is created and accociated with it, then the project can request and update the database and persist as shuffle criteria grows.\par
+After a project has been created, a database collection is created and associated with it. The project can then request and update the database and persist as the shuffling criteria grows.\par
 \includegraphics[width=13cm]{./graphics/databaseAccessUseCase.jpg}
     \rule{0\linewidth}{0.15\linewidth}\par
 \begin{enumerate}
