--- a/Documentation/Requirements/subsections/project.tex
+++ b/Documentation/Requirements/subsections/project.tex
@@ -1,7 +1,7 @@
 This module deals with the configuration of projects. Initially a skeleton project will be set up with basic criteria 
 and additional criteria can be added at a later stage as needed.
 \subsubsection{Use-cases}
-The projects module provides services to create and manipulate projects.\par
+The project module provides services to create and manipulate projects.\par
 \includegraphics[width=13cm]{./graphics/createProjectUseCase.jpg}
     \rule{0\linewidth}{0.15\linewidth}\par
 \begin{enumerate}
@@ -15,7 +15,7 @@ Priority: Important.\par
 Pre-condition: Client must have a STORM profile.\par
 Pre-condition: Manager to be added must have a STORM profile.\par
 Pre-condition: Client must have created a STORM project.\par
-Post-condition: Manager has permition to colaborate on the project.\par
+Post-condition: Manager has permission to collaborate on the project.\par
 \item inputSubjects\par
 Priority: Critical.\par
 Pre-condition: Client must have a STORM profile.\par
