--- a/Documentation/Requirements/subsections/qualityRequirements.tex
+++ b/Documentation/Requirements/subsections/qualityRequirements.tex
@@ -4,8 +4,8 @@ the services it provides. Quality requirements relevant to project STORM are lis
 \subsubsection{Usability}
 Usability is one of the most important quality attributes. Usability tests should be performed to check whether:
 \begin{itemize}
-\item whether users find any aspects of the system cumbersome, non-intuitive or frustrating.
-\item whether the user has a positive experience and finds the functionality easy to use and learn.
+\item users find any aspects of the system cumbersome, non-intuitive or frustrating.
+\item the user has a positive experience and finds the functionality easy to use and learn.
 \end{itemize}
 
 \subsubsection{Scalability}
@@ -15,7 +15,7 @@ The system must implement a very generic optimization algorithm in order to be u
 \begin{itemize}
 \item The optimization algorithm should be able to sort a maximum of 10 000 subjects into groups and respond within 10 seconds.
 \item Reporting queries should respond within 15 seconds. \par
-The above figures does not include network round trip which is outside the control of the system.
+\textit {*The above figures does not include the network round-trip which is outside the control of the system.}
 \end{itemize}
 
 \subsubsection{Maintainability} 
@@ -31,12 +31,12 @@ Amongst the most important quality requirements for the system is maintainabilit
 \end{itemize}
 
 \subsubsection{Reliability}
-The system should provide by default a reasonable level of reliability and should be deployable within configurations which provide a high level availability, supporting
+The system should provide by default a reasonable level of reliability and should be deployable within configurations which provide a high level of availability, supporting
 \begin{itemize}
 \item fail-over safety of all components and
 \item a deployment without single points of failure.
 \end{itemize}
-Hot deployment of new/changing functionality is not required for this system.
+Hot deployment of new or changing functionality is not required for this system.
 
 \subsubsection{Deployability}
 The system must be deployable
@@ -47,7 +47,7 @@ The system must be deployable
 
 \subsubsection{Security}
 Security is a fairly important aspect of the system in order to protect sensitive project and subject data.
-The system should also allow users that are logged on to the system to assign colaborators
+The system should also allow users that are logged on to the system, to assign collaborators
 to a project. 
 
 
