--- a/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
+++ b/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
@@ -1,10 +1,11 @@
 \subsubsection{Human Access Channels}
 The system will be accessible by human users through the following channels:\par
-\begin{enumerate}
+\begin{itemize}
 \item From a web browser through a rich web interface. The system must be accessible from any of the standards-compliant web browsers including all recent versions of Mozilla Firefox, Google Chrome, Apple Safari and Microsoft Internet Explorer.
 \item From mobile devices if time allows it.
-\end{enumerate}
+\end{itemize}
 \subsubsection{System Access Channels}
-Other systems should be able to access services offered by STORM. Perhaps direct feed of teams into other systems.
-\subsubsection{System Access Channels}
-STORM will have access to a NoSQL database to save and retrieve all information needed to shuffle teams. It will also allow for importing to the database from at least CSV files, and possibly other types.
+\begin{itemize}
+\item Other systems should be able to access services offered by STORM. Perhaps direct feed of teams into other systems.
+\item STORM will have access to a NoSQL database to save and retrieve all information needed to shuffle teams. It will also allow for importing to the database from at least .csv files, and possibly other types.
+\end{itemize}
