--- a/Documentation/Requirements/subsections/modularDesign.tex
+++ b/Documentation/Requirements/subsections/modularDesign.tex
@@ -3,7 +3,7 @@ The system is to be a modular system which allows for:
 \end{flushleft}
 
 \begin{itemize} 
-\item[$\bullet$] Only a subset of modules to be deployed minimally the system will require the core modules to be deployed.
+\item[$\bullet$] Only a subset of modules to be deployed. M+inimally the system will require the core modules to be deployed.
 \item[$\bullet$] Further modules to be added at a later stage.
 \end{itemize}
 
@@ -17,5 +17,5 @@ To this end there should be:
 \end{itemize}
 
 \begin{flushleft}
-Modular design allows that each module encapsulates information that is not available to the rest of a program. This information hiding reduces the cost of subsequent design changes when future functionality is added to STORM. For example, if at a later stage functionality is added to allow for personality tests to be completed within STORM and then results are automatically pulled in, a new module can be added without affecting other modules.
+Modular design allows that each module encapsulates information that is not available to the rest of the program. This information hiding reduces the cost of subsequent design changes when future functionality is added to STORM. For example, if at a later stage functionality is added to allow for personality tests to be completed within STORM and results are automatically pulled in, a new module can be added without affecting other modules.
 \end{flushleft}
