--- a/Documentation/Requirements/subsections/modularDesign.tex
+++ b/Documentation/Requirements/subsections/modularDesign.tex
@@ -3,7 +3,7 @@ The system is to be a modular system which allows for:
 \end{flushleft}
 
 \begin{itemize} 
-\item[$\bullet$] Only a subset of modules to be deployed. M+inimally the system will require the core modules to be deployed.
+\item[$\bullet$] Only a subset of modules to be deployed. Minimally the system will require the core modules to be deployed.
 \item[$\bullet$] Further modules to be added at a later stage.
 \end{itemize}
 
