Adding to the User Manual

--- a/Documentation/User Manual/GeneralInformation/Installation.tex
+++ b/Documentation/User Manual/GeneralInformation/Installation.tex
@@ -1,10 +1,14 @@
-\subsection{Back End}
+\subsubsection{Back End}
 	Refer to this section for information on the Back End part of the system. I.E. The part that will be hosted on the server.\par
 	\vspace{0.3cm}
 	
-Place Holder
+\begin{description} 
+\item[Node.js] The first item 
+\item[NPM] The second item 
+\item[Run] The third etc
+\end{description}
 
-\subsection{Front End}
+\subsubsection{Front End}
 	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	
