--- a/Documentation/User Manual/UserManual.tex
+++ b/Documentation/User Manual/UserManual.tex
@@ -5,6 +5,7 @@
 \usepackage{epsfig}
 \usepackage{epstopdf}
 \usepackage{wrapfig}
+\usepackage[margin=1in]{geometry}
 
 
 %\graphicspath{{}}
@@ -15,16 +16,18 @@
 \begin{center}
 \begin{minipage}{0.75\linewidth}
     \centering
+%STORM logo
+    \includegraphics[width=14cm]{./graphics/Storm.png}
 %University logo
-    \includegraphics[width=13cm]{./graphics/universityLogo.jpg}
+    \includegraphics[width=7cm]{./graphics/universityLogo.jpg}
     \rule{0\linewidth}{0.15\linewidth}\par
-
+    \vspace{0.9cm}
 %Thesis title
     {\uppercase{\Large Project Storm \par}}
    	
-	\vspace{0.5cm}
-	{\Large Team NAME \par}
-	\vspace{0.5cm}
+	\vspace{0.7cm}
+	{\Large Team ``NAME" \par}
+	\vspace{0.7cm}
 %Author's name
     {\normalsize Renaldo van Dyk 12204359\par}
     {\normalsize Andreas du Preez 12207871\par}
@@ -49,7 +52,7 @@
 
 \subsection{System Configuration}
 	\input{./GeneralInformation/SystemConfiguration}
-	
+\pagebreak
 \subsection{Installation}
 	\input{./GeneralInformation/Installation}
 	
