--- a/Documentation/User Manual/GettingStarted/FrontEnd.tex
+++ b/Documentation/User Manual/GettingStarted/FrontEnd.tex
@@ -6,11 +6,19 @@
 		sign up for a UserName on the website, Log In, and make use of the shuffling system.
  	\item[get a User ID] \hfill \\
 		To sign up for an account, and get a User ID, enter user details in the appropriate fields in the 		following figure.\par
-   		 \includegraphics[width=13cm]{./graphics/StormUMSU1.jpg}
+		 \begin{figure}[h!] 
+		 \centering \reflectbox{% 
+		 \includegraphics[width=10cm]{./graphics/StormUMSU1.jpg}}
+		 \caption{Signing Up to STORM}
+		 \end{figure}
    		Click on submit and the system will register the user in the database.
-	\item[Log In] \hfill \\
+	\item[log in] \hfill \\
  		To log in to an account enter user details in the appropriate fields in the following figure.\par
-   		 \includegraphics[width=13cm]{./graphics/StormUMSU2.jpg}
+   		\begin{figure}[h!] 
+		\centering \reflectbox{% 
+		\includegraphics[width=10cm]{./graphics/StormUMSU2.jpg}}
+		\caption{Logging In to STORM}
+		\end{figure}
    		Click on submit and the system will navigate to the user's specific team shuffling page.
     	\item[change Username] \hfill \\
  		"Place Holder"
@@ -18,5 +26,11 @@
  		"Place Holder"
 	\item[use the system as a guest] \hfill \\
  		Guests to the system will be able to access the website, and navigate around to see what it
-		is all about, without having to log in or register and starting shuffling teams from the first foot in 		the door. To access this feature, just navigate to the homepage, and do not click on either 		'Sign In' or 'Sign Up'  \ldots
+		is all about, without having to log in or register and starting shuffling teams from the first foot in 		the door. To access this feature, just navigate to the homepage, and click on "See how it 			works" as indicated in the Figure below.\par
+		\begin{figure}[h!] 
+		\centering \reflectbox{% 
+		\includegraphics[width=10cm]{./graphics/StormUMSU3.jpg}}
+		\caption{Using STORM as a guest}
+		\end{figure}
+				
 \end{description}
