Changes on Usermanual

--- a/Documentation/User Manual/GeneralInformation/Installation.tex
+++ b/Documentation/User Manual/GeneralInformation/Installation.tex
@@ -2,10 +2,13 @@
 	Refer to this section for information on the Back End part of the system. I.E. The part that will be hosted on the server.\par
 	\vspace{0.3cm}
 	
+What to install on the server:
 \begin{description} 
-\item[Node.js] The first item 
-\item[NPM] The second item 
-\item[Run] The third etc
+\item[Node.js] \hfill 
+\\ For this system to run on the server, Node.js has to be installed.
+\\ This is easily achieved by navigating to their website (\href{https://nodejs.org}{https://nodejs.org}) and clicking on install. 
+\item[NPM] \hfill 
+\\ NPM must also be installed on the server.  This can be achieved by going to their website  (\href{https://www.npmjs.com/package/npm}{https://www.npmjs.com/package/npm}) and following the easy instructions. 
 \end{description}
 
 \subsubsection{Front End}
