--- a/Documentation/User Manual/GettingStarted/FrontEnd.tex
+++ b/Documentation/User Manual/GettingStarted/FrontEnd.tex
@@ -7,16 +7,16 @@
  	\item[get a User ID] \hfill \\
 		To sign up for an account, and get a User ID, enter user details in the appropriate fields in the 		following figure.\par
 		 \begin{figure}[h!] 
-		 \centering \reflectbox{% 
-		 \includegraphics[width=10cm]{./graphics/StormUMSU1.jpg}}
+		 \centering
+		 \includegraphics[width=10cm]{./graphics/StormUMSU1.jpg}
 		 \caption{Signing Up to STORM}
 		 \end{figure}
    		Click on submit and the system will register the user in the database.
 	\item[log in] \hfill \\
  		To log in to an account enter user details in the appropriate fields in the following figure.\par
    		\begin{figure}[h!] 
-		\centering \reflectbox{% 
-		\includegraphics[width=10cm]{./graphics/StormUMSU2.jpg}}
+		\centering 
+		\includegraphics[width=10cm]{./graphics/StormUMSU2.jpg}
 		\caption{Logging In to STORM}
 		\end{figure}
    		Click on submit and the system will navigate to the user's specific team shuffling page.
@@ -28,8 +28,8 @@
  		Guests to the system will be able to access the website, and navigate around to see what it
 		is all about, without having to log in or register and starting shuffling teams from the first foot in 		the door. To access this feature, just navigate to the homepage, and click on "See how it 			works" as indicated in the Figure below.\par
 		\begin{figure}[h!] 
-		\centering \reflectbox{% 
-		\includegraphics[width=10cm]{./graphics/StormUMSU3.jpg}}
+		\centering  
+		\includegraphics[width=10cm]{./graphics/StormUMSU3.jpg}
 		\caption{Using STORM as a guest}
 		\end{figure}
 				
