--- a/Documentation/User Manual/GettingStarted/BackEnd.tex
+++ b/Documentation/User Manual/GettingStarted/BackEnd.tex
@@ -1,1 +1,7 @@
-"Place Holder"
+After the packages refered to in section 1.3.1 have been installed, run the following with command-prompt while in the 'src' folder. 
+\begin{enumerate} 
+\item npm install 
+\item node app.js 
+\end{enumerate}
+
+The 'npm install' should automatically install all the dependencies on the server, while 
