Added System Access Channels

--- a/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
+++ b/Documentation/Requirements/subsections/accessAndIntegrationRequirements.tex
@@ -7,5 +7,12 @@ The system will be accessible by human users through the following channels:\par
 \subsubsection{System Access Channels}
 \begin{itemize}
 \item Other systems should be able to access services offered by STORM. Perhaps direct feed of teams into other systems.
-\item STORM will have access to a NoSQL database to save and retrieve all information needed to shuffle teams. It will also allow for importing to the database from at least .csv files, and possibly other types.
+\item Various technologies will be used such as:
+	\begin{itemize}
+	\item Node.js
+	\item Express.js
+	\item EJS
+	\item Mongoose
+	\item SMTP
+	\end{itemize}
 \end{itemize}
