Fixed errors on User Manual

--- a/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
+++ b/Documentation/User Manual/GeneralInformation/SystemConfiguration.tex
@@ -1,5 +1,5 @@
-\subsubsection{Back End}
-	Refer to this section for information on the Back End part of the system. I.E. The part that will be hosted on the server.\par
+\subsubsection{Back-end}
+	Refer to this section for information on the back-end part of the system. For example the part that will be hosted on the server.\par
 	\vspace{0.3cm}
 	
 \begin{wrapfigure}{i}{0.22\textwidth}
@@ -8,16 +8,15 @@
 %  \end{center}
 \end{wrapfigure}
 
-The back end of this system should be hosted on a server.
-As it is a relatively small system, and open source. it can be hosted on a fairly inexpensive server with Linux on.
+The back-end of this system should be hosted on a server, as it is a relatively small system, and open source. It can be hosted on a fairly inexpensive server which runs on Linux.
 
 Keep in mind that as the database grows, a bigger server will need to be integrated.  This will be effortless as the system is designed to be scalable.
 
 
-\subsubsection{Front End}
-	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
+\subsubsection{Front-end}
+	Refer to this section for information on the front-end part of the system. For example the part that will be used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	
 For users to use the system, they only need a web activated device with a web browser.
 
-The STORM system works best with Google Chrome, but can be used on all other browsers(The look and feel of the system might just be a bit more boring/basic than when run on Google Chrome).
+The STORM system works best with Google Chrome, but can be used on all other browsers (The look and feel of the system might just be a bit more boring/basic when not used on Google Chrome).
