--- a/Documentation/User Manual/GeneralInformation/Installation.tex
+++ b/Documentation/User Manual/GeneralInformation/Installation.tex
@@ -1,18 +1,18 @@
-\subsubsection{Back End}
-	Refer to this section for information on the Back End part of the system. I.E. The part that will be hosted on the server.\par
+\subsubsection{Back-end}
+	Refer to this section for information on the back-end part of the system. For example the part that will be hosted on the server.\par
 	\vspace{0.3cm}
 	
 What to install on the server:
 \begin{description} 
 \item[Node.js] \hfill 
 \\ For this system to run on the server, Node.js has to be installed.
-\\ This is easily achieved by navigating to their website (\href{https://nodejs.org}{https://nodejs.org}) and clicking on install. 
+\\ This is easily achieved by navigating to their website (\href{https://www.nodejs.org}{https://www.nodejs.org}) and clicking on install. 
 \item[NPM] \hfill 
 \\ NPM must also be installed on the server.  This can be achieved by going to their website  (\href{https://www.npmjs.com/package/npm}{https://www.npmjs.com/package/npm}) and following the easy instructions. 
 \end{description}
 
-\subsubsection{Front End}
-	Refer to this section for information on the Front End part of the system. I.E. The part that will be 	used by the bulk of the users to shuffle the teams on the web client.\par
+\subsubsection{Front-end}
+	Refer to this section for information on the front-end part of the system. For example the part that will be	used by the bulk of the users to shuffle the teams on the web client.\par
 	\vspace{0.3cm}
 	
 Because the system is web based, it does not have to be installed on your device. 
