--- a/Documentation/User Manual/GettingStarted/BackEnd.tex
+++ b/Documentation/User Manual/GettingStarted/BackEnd.tex
@@ -4,7 +4,7 @@ After the packages refered to in section 1.3.1 have been installed, run the foll
 \item node app.js 
 \end{enumerate}
 
-The 'npm install' should automatically install all the dependencies on the server, as long as it has access to the internet.
-The 'node app.js' will start the server, and connect to the database.
+The ``npm install'' should automatically install all the dependencies on the server, as long as it has access to the internet.
+The ``node app.js'' will start the server, and connect to the database.
 
 The system should now be up and running, and the user should be able to access it at the website chosen when the hosting package was set up.
