--- a/Documentation/User Manual/GettingStarted/FrontEnd.tex
+++ b/Documentation/User Manual/GettingStarted/FrontEnd.tex
@@ -1,8 +1,8 @@
 {\Large \textbf{How to...} \par}
 
 \begin{description}
- 	\item[get a licence?] \hfill \\
- 		As this is a free software, there is no need to buy any licences. To use this software, simply 
+ 	\item[get a license?] \hfill \\
+ 		As this is free software, there is no need to buy any licenses. To use this software, simply 
 		sign up for a UserName on the website, Log In, and make use of the shuffling system.
  	\item[get a User ID] \hfill \\
 		To sign up for an account, and get a User ID, enter user details in the appropriate fields in the 		following figure.\par
@@ -13,7 +13,7 @@
 		 \end{figure}
    		Click on submit and the system will register the user in the database.
 	\item[log in] \hfill \\
- 		To log in to an account enter user details in the appropriate fields in the following figure.\par
+ 		To log in to an account, enter user details in the appropriate fields in the following figure.\par
    		\begin{figure}[h!] 
 		\centering 
 		\includegraphics[width=10cm]{./graphics/StormUMSU2.jpg}
@@ -26,7 +26,7 @@
  		"Place Holder"
 	\item[use the system as a guest] \hfill \\
  		Guests to the system will be able to access the website, and navigate around to see what it
-		is all about, without having to log in or register and starting shuffling teams from the first foot in 		the door. To access this feature, just navigate to the homepage, and click on "See how it 			works" as indicated in the Figure below.\par
+		is all about, without having to log in or register and start shuffling teams from the first foot in 		the door. To access this feature, just navigate to the homepage, and click on "See how it 			works" as indicated in the Figure below.\par
 		\begin{figure}[h!] 
 		\centering  
 		\includegraphics[width=10cm]{./graphics/StormUMSU3.jpg}
