--- a/Documentation/User Manual/UsingTheSystem/UsingTheSystem.tex
+++ b/Documentation/User Manual/UsingTheSystem/UsingTheSystem.tex
@@ -1,7 +1,7 @@
 \begin{enumerate}
 \item Sign Up\par
 
-To Sign up, Insert your details on the following box on our Home page.
+To Sign up, insert your details in the following box on our Home page.
 To sign up for an account, and get a User ID, enter user details in the appropriate fields on our Home page in the following figure.\par
 
 \includegraphics[width=13cm]{./graphics/StormUMSU1.jpg}
